:construction: [untested] VM

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -52,6 +52,11 @@
     "xiosbase": "cpp",
     "xlocale": "cpp",
     "xlocinfo": "cpp",
-    "xlocnum": "cpp"
+    "xlocnum": "cpp",
+    "array": "cpp",
+    "variant": "cpp",
+    "map": "cpp",
+    "xtree": "cpp",
+    "optional": "cpp"
   }
 }
